# stock-MCP

./: .gitignore  README.md  StockScreener.py  dependencies.txt  pyproject.toml  run.txt
Python/: StockMCPServer.py  StockScreener.py  WATCHLIST.py
