[project]
name = "stock-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "finvizfinance>=1.3.0",
    "mcp[cli]>=1.27.2",
    "pandas>=2.3.3",
    "pendulum>=3.2.0",
    "tradingview-screener>=3.2.0",
    "yfinance>=1.4.1",
]
